5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1642_869.log
== SUBMITION (2019-04-22 18:28:32) 
-- CODE:
preco = float(input())
if( preco >= 200 ):
	print( preco - preco*0.05)
-- EXECUTION TIME:
0.157016
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 18:28:34) 
-- CODE:
preco = float(input())
if( preco >= 200 ):
	print( preco - preco*0.05)
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 18:29:00) 
-- CODE:
preco = float(input())
if( preco >= 200 ):
	print( round(preco - preco*0.05),2))
-- EXECUTION TIME:
0.173658
-- ERROR:
  File "/home/codebench/codes/1642/869/main.py", line 3
    print( round(preco - preco*0.05),2))
                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 18:29:18) 
-- CODE:
preco = float(input())
if( preco >= 200 ):
	print( round((preco - preco*0.05),2))
-- EXECUTION TIME:
0.17503
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
